<resources>
    <string name="app_name">MyProfile</string>
    <string name="text_ne_to">Имя:</string>
    <string name="text_name">Имя:</string>
    <string name="text_vozr">Возраст:</string>
    <string name="text_spec">Специализация:</string>
    <string name="text_foto">Фото</string>
    <string name="text_proekt">Проекты</string>
    <string name="text_dostig">Достижения</string>
</resources>