<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/lili" />

        <ImageView
            android:id="@+id/ic_launcher"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_gravity="center"
            android:foreground="@null"
            android:src="@tools:sample/avatars"
            app:srcCompat="@android:drawable/ic_menu_my_calendar" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_name"
            android:textSize="20sp"
            tools:text="Имя: Артем" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_vozr"
            android:textSize="20sp"
            tools:text="Возраст: 18" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_spec"
            android:textSize="20sp"
            tools:text="Специализация: Android-разработчик" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="NotSibling">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="115dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="#9C9B95"
            android:gravity="center"
            android:text="@string/text_foto"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="115dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="#151410"
            android:gravity="center"
            android:text="@string/text_proekt"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="115dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="#151410"
            android:gravity="center"
            android:text="@string/text_dostig"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </LinearLayout>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="275dp"
        app:columnCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.113">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="137dp"
            android:layout_height="137dp"
            android:src="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="137dp"
            android:layout_height="137dp"
            android:src="@tools:sample/avatars"
            app:layout_column="1"
            app:layout_row="0" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="137dp"
            android:layout_height="137dp"
            android:src="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="137dp"
            android:layout_height="137dp"
            android:src="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="137dp"
            android:layout_height="137dp"
            android:src="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="137dp"
            android:layout_height="137dp"
            android:src="@tools:sample/avatars" />

    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>